--- a/ansible-conf/hosts/inventory.yml
+++ b/ansible-conf/hosts/inventory.yml
@@ -1,13 +1,1 @@
-# inventory.yml
-
-nginx:
-  hosts:
-    nginx_proxy:
-      ansible_host: 172.19.0.3
-      ansible_user: root
-
-rancher:
-  hosts:
-    ubuntu2204:
-      ansible_host: 172.19.0.4
-      ansible_user: root
+{"all": {"hosts": {"ubuntu_ansible_1": {"ansible_host": "172.19.0.2", "ansible_user": "root"}, "ubuntu_ubuntu_1": {"ansible_host": "172.19.0.3", "ansible_user": "root"}, "ubuntu_lb_1": {"ansible_host": "172.19.0.4", "ansible_user": "root"}}}, "children": {"ungrouped": {"hosts": {}}}}
